after final update rana

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Section 1 -->
-    <div style =background-color:antiquewhite>
+    <div class="background">
         <a href=".aboutus.html/"target = "_blank">ABOUT US</a>
         <h1>Rana Bakri</h1>
         
@@ -38,7 +38,7 @@
         </div>
         <hr/>
           <!-- Section 3 -->
-          <div style = background-color:black; color: white>
+          <div class = "background1">
             <ul>
                 <li><a href="https://twitter.com/home" target = "_blank"> twitter</a><li>
                <li> <a href="https://www.w3schools.com/html/html_intro.asp"target = "_blank">about us</a></ul><li>
